<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorBlanco"
            android:orientation="vertical">

            <!--NOMBRE-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp">

                    <TextView
                        style="@style/TextViewFormulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/formulario_titulo_contactos"
                        android:layout_gravity="center"
                        android:textSize="18dp"/>

            </LinearLayout>

            <!--NOMBRE-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="18dp"
                    android:paddingRight="16dp">

                    <TextView
                        style="@style/TextViewFormulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/formulario_nombre" />
                    <TextView
                        android:textColor="@color/colorRojo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/formulario_obligatorio" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <EditText
                        android:id="@+id/etNombre"
                        style="@style/HintEditTextFormulario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:hint="@string/formulario_nombre" />
                </LinearLayout>

            </LinearLayout>

            <!--APELLIDO PATERNO-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="18dp"
                    android:paddingRight="16dp">

                    <TextView
                        style="@style/TextViewFormulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/formulario_apellido_paterno" />
                    <TextView
                        android:textColor="@color/colorRojo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/formulario_obligatorio" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <EditText
                        android:id="@+id/etApellidoPaterno"
                        style="@style/HintEditTextFormulario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:hint="@string/formulario_apellido_paterno" />
                </LinearLayout>

            </LinearLayout>

            <!--APELLIDO MATERNO-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="18dp"
                    android:paddingRight="16dp">

                    <TextView
                        style="@style/TextViewFormulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/formulario_apellido_materno" />

                    <!--<TextView-->
                        <!--android:textColor="@color/colorRojo"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/formulario_obligatorio" />-->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <EditText
                        android:id="@+id/etApellidoMaterno"
                        style="@style/HintEditTextFormulario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:hint="@string/formulario_apellido_materno" />
                </LinearLayout>

            </LinearLayout>

            <!--CARGO-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="18dp"
                    android:paddingRight="16dp">

                    <TextView
                        style="@style/TextViewFormulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/formulario_cargo" />

                    <TextView
                        android:textColor="@color/colorRojo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/formulario_obligatorio" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <!--<EditText-->
                        <!--android:id="@+id/etCargo"-->
                        <!--style="@style/HintEditTextFormulario"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:singleLine="true"-->
                        <!--android:hint="@string/formulario_cargo" />-->

                    <Spinner
                        android:id="@+id/spCargo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined">

                    </Spinner>
                </LinearLayout>

            </LinearLayout>

            <!--TELEFONO-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="18dp"
                    android:paddingRight="16dp">

                    <TextView
                        style="@style/TextViewFormulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/formulario_telefono" />
                    <TextView
                        android:textColor="@color/colorRojo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/formulario_obligatorio" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <EditText
                        android:id="@+id/etTelefono"
                        style="@style/HintEditTextFormulario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/formulario_hint_telefono"
                        android:singleLine="true"
                        android:inputType="number"
                        android:maxLength="10" />
                </LinearLayout>

            </LinearLayout>

            <!--EXTENSION-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="18dp"
                    android:paddingRight="16dp">

                    <TextView
                        style="@style/TextViewFormulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/formulario_extension" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <EditText
                        android:id="@+id/etExtension"
                        style="@style/HintEditTextFormulario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/formulario_extension"
                        android:singleLine="true"
                        android:inputType="number"
                        android:maxLength="5" />
                </LinearLayout>

            </LinearLayout>

            <!--EMAIL-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="18dp"
                    android:paddingRight="16dp">

                    <TextView
                        style="@style/TextViewFormulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/formulario_email" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <EditText
                        android:id="@+id/etEmail"
                        style="@style/HintEditTextFormulario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/formulario_email_contacto"
                        android:singleLine="true"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

            </LinearLayout>

            <!--COMENTARIOS-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="18dp"
                    android:paddingRight="16dp">

                    <TextView
                        style="@style/TextViewFormulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/formulario_comentarios" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <EditText
                        android:id="@+id/etComentariosContacto"
                        style="@style/HintEditTextFormulario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:singleLine="true"
                        android:hint="@string/formulario_hint_comentario" />
                </LinearLayout>
            </LinearLayout>

            <!--Contacto Principal-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="18dp"
                    android:paddingRight="16dp">

                    <TextView
                        style="@style/TextViewFormulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/formulario_contacto_principal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                   <RadioGroup
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical">
                        <RadioButton
                            android:id="@+id/radio_si"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/formulario_si" />
                       <RadioButton
                           android:id="@+id/radio_no"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/formulario_no" />
                   </RadioGroup>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!--BOTONES CANCELAR/GUARDAR-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/nav_custom_divider"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:showDividers="middle">

            <Button
                android:id="@+id/btnCancelarContacto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_cancelar"
                style="@style/BotonAzulFormulario"/>

            <Button
                android:id="@+id/btnGuardarContacto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_guardar"
                style="@style/BotonAzulFormulario"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>